<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <!-- content_main String -->
    <string name="download_image_content_description">Image Download</string>
    <string name="glide_radio_button">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_radio_button">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_radio_button">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <!--  content_detail String  -->
    <string name="title_activity_detail">DetailActivity</string>
    <string name="status">Status :</string>
    <string name="file_name">File Name :</string>
    <string name="ok_button">OK BUTTON</string>
    <string name="ok">OK</string>

    <!--  Notification String  -->
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">View Download</string>

    <!--  MainActivity String  -->
    <string name="select_file_download">Please select the file to download</string>
    <string name="download_complete">Download complete</string>
    <string name="download_success">Success</string>
    <string name="download_fail">Fail</string>

</resources>
