<?xml version="1.0" encoding="utf-8"?>
<MotionScene
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ConstraintSet android:id="@+id/start">
        <Constraint
            android:id="@+id/file_name_label"
            style="@style/TextAppearance.App.Subheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginTop="24dp"
            android:text="@string/file_name"
            android:textColor="@color/detailLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@+id/file_name"
            style="@style/TextAppearance.App.Heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="@dimen/default_padding"
            android:alpha="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@+id/status_label"
            style="@style/TextAppearance.App.Subheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:text="@string/status"
            android:textColor="@color/detailLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/file_name_label"/>


        <Constraint
            android:id="@+id/status_value"
            style="@style/TextAppearance.App.Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:textColor="@color/colorPrimary"
            android:alpha="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/file_name"
            app:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/ok_button"
            android:text="@string/ok"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

    </ConstraintSet>

    <ConstraintSet android:id="@+id/end">
        <Constraint
            android:id="@+id/file_name_label"
            style="@style/TextAppearance.App.Subheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginTop="24dp"
            android:text="@string/file_name"
            android:textColor="@color/detailLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@+id/file_name"
            style="@style/TextAppearance.App.Heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/default_padding"
            android:textColor="@color/colorPrimary"
            android:alpha="1.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.875"
            app:layout_constraintStart_toEndOf="@+id/file_name_label"
            app:layout_constraintTop_toTopOf="parent"/>

        <Constraint
            android:id="@+id/status_label"
            style="@style/TextAppearance.App.Subheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:text="@string/status"
            android:textColor="@color/detailLabel"
            app:layout_constraintBaseline_toBaselineOf="@+id/status_value"
            app:layout_constraintStart_toStartOf="parent" />

        <Constraint
            android:id="@+id/status_value"
            style="@style/TextAppearance.App.Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:textColor="@color/colorPrimary"
            android:alpha="1.0"
            app:layout_constraintStart_toStartOf="@+id/file_name"
            app:layout_constraintTop_toBottomOf="@+id/file_name" />

        <Constraint
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/ok_button"
            android:text="@string/ok"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

    </ConstraintSet>

    <Transition
        app:autoTransition="animateToEnd"
        app:constraintSetEnd="@id/end"
        app:constraintSetStart="@+id/start"
        app:duration="1500" />

</MotionScene>
